# spotilyze

./: .gitignore  Cargo.toml  docker-compose.yml
migrations/2019-10-24-191951_create_poll_log/: down.sql  up.sql
migrations/2019-10-27-164509_create_track/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  schema.rs  spotify.rs
