[package]
name = "spotilyze"
version = "0.1.0"
authors = ["Matthew Daubney <matt@daubers.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = "0.7.0"
diesel = { version = "1.4.3", features = ["postgres"] }
dotenv = "0.9.0"