[package]
name = "spotilyze"
version = "0.1.0"
authors = ["Matthew Daubney <matt@daubers.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = "0.7.0"
diesel = { version = "1.4.3", features = ["postgres"] }
dotenv = "0.9.0"
juniper = { version = "0.14.1", default-features = false}
juniper_rocket = "0.5.1"
rocket = "0.4.2"

[dev-dependencies.juniper]
version = "0.14.1"
features = ["expose-test-schema", "serde_json"]